# Inbotic

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  WEB_INTERFACE_README.md  auth.py  database.py  gmail_service.py  google_oauth_config.py  google_tasks_service.py  manage_users.py  package-lock.json  pyproject.toml  requirements.txt  start_web.py  user_service.py  web_app.py
app/: __init__.py  auto_process.py  config.py  deps.py
app/routes/: auth.py  emails.py  home.py  profile.py  tasks.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Footer.jsx  Navbar.jsx  ThemeToggle.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/lib/: api.js
frontend/src/pages/: Emails.jsx  ForgotPassword.jsx  Home.jsx  Login.jsx  Profile.jsx  Register.jsx  TaskReview.jsx  Tasks.jsx
llm_features/: get_email.py  llm_client.py  requirements.txt
scripts/: README.md  add_due_time_column.py  check_db.py  migrate_chat_history.py  migrate_db.py  migrate_reset_token.py  seed_db.py
static/css/: style.css
templates/: emails.html  index.html  layout.html  login.html  profile.html  register.html  review.html  tasks.html
